<?xml version="1.0"?>
<package format="3">
  <name>yaets</name>
  <version>0.0.1</version>
  <description>This package provides a execution tracing library.</description>
  <author>Francisco Martín Rico</author>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>Apache License, Version 2.0</license>

  <build_depend>ament_cmake</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
